sửa footer phần user

--- a/pages/gio-hang.html
+++ b/pages/gio-hang.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="../src/css/search-styles.css">
   <link rel="stylesheet" href="../assets/icon/fontawesome-free-6.7.2-web/css/all.min.css">
   <link rel="stylesheet" href="../src/css/searchAdvanceMobile.css">
+  <link rel="stylesheet" href="../src/css/footer.css">
   <!-- JS  -->
   <script src="../assets/libs/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
   <script src="../src/js/Trang_chu.js"></script>
@@ -519,60 +520,74 @@
 
 
   <!-- FOOTER  -->
-  <footer>
-    <div class="col-01">
-      <div class="row-1">
-        <img src="../assets/images/LOGO-2.png" alt="Logo final">
-      </div>
+  <footer class="footer">
+    <div class="footer-column">
+      <h3>Thee Tree</h3>
+      <ul>
+        <li><a href="#">Cây dễ chăm</a></li>
+        <li><a href="#">Cây văn phòng</a></li>
+        <li><a href="#">Cây dưới nước</a></li>
+        <li><a href="#">Cây để bàn</a></li>
+      </ul>
+    </div>
 
-      <div class="row-2">
-        <hr>
-      </div>
+    <div class="footer-column">
+      <h3>Learn</h3>
+      <ul>
+        <li><a href="#">Cách chăm sóc cây</a></li>
+        <li><a href="#">Lợi ích của cây xanh</a></li>
+        <li><a href="#">Cây phong thủy</a></li>
+      </ul>
+    </div>
 
-      <div class="row-3">
-        <div class="text-wrapper">
-          <span style="font-size: 32px; color: white;"><strong>THE TREE</strong></span><span class="text-wrap-1"
-            style="color: white; font-size: 25px; text-align: justify;"> mong mang đến không gian sống xanh, như là một
-            cách để khơi nguồn cảm hứng, cải thiện chất lượng tinh
-            thần tươi
-            và đồng thời còn mang lại tính thẩm mỹ cho không gian nội thất.</span>
-        </div>
+    <div class="footer-column">
+      <h3>More from The Tree</h3>
+      <ul>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Affiliate</a></li>
+        <li><a href="#">Liên hệ</a></li>
+        <li><a href="#">Faq's</a></li>
+        <li><a href="#">Sign In</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column newsletter">
+      <h3>Let's Stay Connected</h3>
+      <p>Nhập email của bạn để được giảm giá 10%.</p>
+
+      <form class="email-form">
+        <input type="email" placeholder="Your Email">
+        <button type="submit">SUBMIT</button>
+      </form>
+
+      <h3>Theo dõi chúng tôi</h3>
+      <div class="social-icons">
+        <a href="#" aria-label="Pinterest">
+          <i class="fa-brands fa-pinterest"></i>
+        </a>
+        <a href="#" aria-label="Facebook">
+          <i class="fa-brands fa-facebook"></i>
+        </a>
+        <a href="#" aria-label="Instagram">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a href="#" aria-label="Twitter">
+          <i class="fa-brands fa-x-twitter"></i>
+        </a>
       </div>
     </div>
 
-    <div class="col-02">
-      <div class="col-2-row-1">
-        <div class="text-wrapper-2">
-          <p style="color: white; font-size: 31px;">CÁC TRANG MẠNG XÃ HỘI</p>
-        </div>
+    <div class="copyright">
+      © 2021 tenzotea.co
 
-        <div class="icon-socialnet">
-          <img src="../assets/images/facebook.svg" alt="facebook">
-          <img src="../assets/images/instagram.svg" alt="instagram">
-          <img src="../assets/images/youtube.svg" alt="youtube">
-          <img src="../assets/images/mastercard.svg" alt="messenger">
-          <img src="../assets/images/x-twitter.svg" alt="x">
-        </div>
-      </div>
-
-      <div class="col-2-row-2">
-        <div class="text-wrapper-3">
-          <div class="text-wrapper-3-1">
-            <p style="color: white; font-size: 31px;">PHƯƠNG THỨC THANH TOÁN</p>
-          </div>
-        </div>
-        <div class="icon-socialnet">
-          <img src="../assets/images/paypal.svg" alt="facebook">
-          <img src="../assets/images/mastercard.svg" alt="instagram">
-        </div>
-      </div>
-    </div>
-
-    <div class="col-03">
-      <p class="lien-he" style="font-size: 32px;">LIÊN HỆ</p>
-      <div class="div">
-        <p style="font-size: 27px;">SĐT: 0838 396 969 </p>
-        <p style="font-size: 27px;">ĐỊA CHỈ: 105 Trần Thị Trọng, phường 15, quận Tân Bình, TP.HCM</p>
+      <div class="policies">
+        <a href="#">Điều khoản dịch vụ</a>
+        <span>|</span>
+        <a href="#">Chính sách bảo mật</a>
+        <span>|</span>
+        <a href="#">Chính sách hoàn tiền</a>
+        <span>|</span>
+        <a href="#">Chính sách trợ năng</a>
       </div>
     </div>
     <!-- xong footer  -->
