sửa trang đănh nhập

--- a/index.html
+++ b/index.html
@@ -128,6 +128,14 @@
                 </div>
 
                 <div class="product" data-category="cay-de-cham">
+                  <img src="./assets/images/CAY4.jpg" alt="Cây phát tài" />
+                  <div class="p-details">
+                    <h2>Cây phát tài</h2>
+                    <h3>750.000 vnđ</h3>
+                  </div>
+                </div>
+
+                <div class="product" data-category="cay-de-cham">
                   <img src="./assets/images/CAY5.jpg" alt="Cây phát tài" />
                   <div class="p-details">
                     <h2>Cây phát tài</h2>
