--- a/pages/user-register.html
+++ b/pages/user-register.html
@@ -15,7 +15,7 @@
   <script src="../src/js/search-common.js"></script>
   <script src="../assets/libs/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
   <script></script>
-  <script src="../js/main.js"></script>
+  <script src="../src/js/main.js"></script>
   <script src="../src/js/onOffSeacrhAdvance.js"></script>
   <title>Đăng kí</title>
 </head>
