--- a/pages/user-login.html
+++ b/pages/user-login.html
@@ -425,27 +425,31 @@
   </div>
 
   <!-- ARTICLE -->
-  <h2 id="dangky">Đăng nhập</h2>
-  <form id="form-02" onsubmit="event.preventDefault(); window.location.href='../index.html'; singIn()">
-    <div class="mb-3">
-      <label for="exampleInputEmail1" class="form-label">Gmail:</label>
-      <input id="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-        placeholder="Gmail..." required>
-      <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+  <main>
+    <div class="login-container">
+      <div class="login-header">
+        <h1>Đăng nhập</h1>
+      </div>
+      <form>
+        <div class="form-group">
+          <label for="username">Username</label>
+          <input type="text" id="username" class="form-control" placeholder="Nhập username của bạn" required>
+        </div>
+        <div class="form-group">
+          <label for="password">Mật khẩu</label>
+          <input type="password" id="password" class="form-control" placeholder="Nhập mật khẩu" required>
+        </div>
+        <div class="checkbox-group">
+          <input type="checkbox" id="remember" name="remember">
+          <label for="remember">Lưu mật khẩu</label>
+        </div>
+        <button type="submit" class="btn-login">Đăng nhập</button>
+        <div class="helper-text">
+          <a href="#">Quên mật khẩu?</a>
+        </div>
+      </form>
     </div>
-    <div class="mb-3">
-      <label for="exampleInputPassword1" class="form-label">Mật khẩu: </label>
-      <input id="password" type="password" class="form-control" id="exampleInputPassword1" placeholder="Mật khẩu..."
-        required>
-    </div>
-    <div class="mb-3 form-check">
-      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-      <label class="form-check-label" for="exampleCheck1">Lưu mật khẩu</label>
-    </div>
-    <div class="button d-flex justify-content-center">
-      <button type="submit" class="btn btn-primary btn-login">Đăng nhập </button>
-    </div>
-  </form>
+  </main>
 
   <!-- FOOTER  -->
   <footer class="footer">
