--- a/pages/user-register.html
+++ b/pages/user-register.html
@@ -473,19 +473,23 @@
 
             <div class="form-group">
               <label for="city">Tỉnh/Thành phố</label>
-              <select id="city" class="form-control">
-                <option value="" selected disabled>Chọn tỉnh/thành phố</option>
-                <option value="hanoi">Hà Nội</option>
-                <option value="hcm">TP. Hồ Chí Minh</option>
-                <option value="danang">Đà Nẵng</option>
-                <option value="other">Khác</option>
-              </select>
+              <input type="text" class="form-control" name="inputCity" id="inputCity" placeholder="Tỉnh/ Thành phố">
             </div>
           </div>
 
           <div class="form-group">
+            <label for="city">Quận/ huyện</label>
+            <input type="text" class="form-control" name="inputDistrict" id="inputDistrict" placeholder="Quận/ huyện">
+          </div>
+
+          <div class="form-group">
+            <label for="city">Xã/ phường</label>
+            <input type="text" class="form-control" name="inputWard" id="inputWard" placeholder="Xã/ phường">
+          </div>
+
+          <div class="form-group">
             <label for="address">Địa chỉ</label>
-            <input type="text" id="address" class="form-control" placeholder="Nhập địa chỉ chi tiết">
+            <input type="text" id="address" class="form-control" placeholder="Số nhà/ tên đường">
           </div>
 
           <div class="form-row">
