--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   <script src="./src/js/search.js"></script>
   <!-- Tìm kiếm cơ bản  -->
   <script src="./src/js/search-common.js"></script>
+  <!-- Lọc sản phẩm  -->
+  <script src="./src/js/filter-product.js"></script>
   <title>Trang Chủ</title>
 
   <!-- AVCCVSA -->
@@ -417,16 +419,16 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="./pages/phan-loai1.html">Cây dễ chăm</a>
+                  <a class="dropdown-item">Cây dễ chăm</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./pages/phan-loai1.html">Cây văn phòng</a>
+                  <a class="dropdown-item">Cây văn phòng</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./pages/phan-loai1.html">Cây để bàn</a>
+                  <a class="dropdown-item">Cây để bàn</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./pages/phan-loai1.html">Cây dưới nước</a>
+                  <a class="dropdown-item">Cây dưới nước</a>
                 </li>
               </ul>
             </div>
@@ -579,6 +581,9 @@
       </div>
     </section>
   </main>
+
+  <div class="type-tree" id="type-tree"></div>
+  <div id="product-list">Kết quả ở đây</div>
 
   <footer class="footer">
     <div class="footer-column">
