--- a/pages/gio-hang.html
+++ b/pages/gio-hang.html
@@ -18,7 +18,7 @@
   <script src="../src/js/search-common.js"></script>
   <script src="../src/js/onOffSeacrhAdvance.js"></script>
   <!-- Lọc sản phẩm theo phân loại  -->
-  <script src="../src/js/filter-product.js"></script>
+  <!-- <script src="../src/js/filter-product.js"></script> -->
   <title>Giỏ hàng</title>
 </head>
 
@@ -409,10 +409,18 @@
                 Sản phẩm
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item">Cây dễ chăm</a></li>
-                <li><a class="dropdown-item">Cây văn phòng</a></li>
-                <li><a class="dropdown-item">Cây để bàn</a></li>
-                <li><a class="dropdown-item">Cây dưới nước</a></li>
+                <li>
+                  <a class="dropdown-item" href="./phan-loai.html?category_id=1">Cây dễ chăm</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./phan-loai.html?category_id=2">Cây văn phòng</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./phan-loai.html?category_id=3">Cây để bàn</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./phan-loai.html?category_id=4">Cây dưới nước</a>
+                </li>
               </ul>
             </div>
           </li>
@@ -520,8 +528,8 @@
 
   </div>
 
-  <div class="type-tree" id="type-tree"></div>
-  <div id="product-list">Kết quả ở đây</div>
+  <!-- <div class="type-tree" id="type-tree"></div>
+  <div id="product-list">Kết quả ở đây</div> -->
 
   <!-- FOOTER  -->
   <footer class="footer">
