--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
       <div class="brand">
         <div class="brand-logo">
           <!-- Quay về trang chủ  -->
-          <a href="index.html"><img class="img-fluid" src="./assets/images/LOGO-2.png" alt="LOGO" /></a>
+          <a href="index.html"><img class="img-fluid" src="./assets/images/LOGO-2.jpg" alt="LOGO" /></a>
         </div>
         <div class="brand-name">THE TREE</div>
       </div>
@@ -419,16 +419,16 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item">Cây dễ chăm</a>
+                  <a class="dropdown-item" href="./pages/phan-loai.html?category_id=1">Cây dễ chăm</a>
                 </li>
                 <li>
-                  <a class="dropdown-item">Cây văn phòng</a>
+                  <a class="dropdown-item" href="./pages/phan-loai.html?category_id=2">Cây văn phòng</a>
                 </li>
                 <li>
-                  <a class="dropdown-item">Cây để bàn</a>
+                  <a class="dropdown-item" href="./pages/phan-loai.html?category_id=3">Cây để bàn</a>
                 </li>
                 <li>
-                  <a class="dropdown-item">Cây dưới nước</a>
+                  <a class="dropdown-item" href="./pages/phan-loai.html?category_id=4">Cây dưới nước</a>
                 </li>
               </ul>
             </div>
@@ -457,7 +457,7 @@
         <div class="img__TREE">
           <!-- LINK SẢN PHẨM -->
 
-          <img class="THE-TREE" src="./assets/images/CAY1.PNG" alt="Cây dễ Chăm" />
+          <img class="THE-TREE" src="./assets/images/CAY1.jpg" alt="Cây dễ Chăm" />
           <p class="content_TREE-1">CÂY DỄ CHĂM</p>
         </div>
 
@@ -581,9 +581,6 @@
       </div>
     </section>
   </main>
-
-  <div class="type-tree" id="type-tree"></div>
-  <div id="product-list">Kết quả ở đây</div>
 
   <footer class="footer">
     <div class="footer-column">
