--- a/pages/phan-loai2.html
+++ b/pages/phan-loai2.html
@@ -406,16 +406,16 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="phan-loai1.html">Cây dễ chăm</a>
+                  <a class="dropdown-item" href="./pages/phan-loai.html?category_id=1">Cây dễ chăm</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="phan-loai1.html">Cây văn phòng</a>
+                  <a class="dropdown-item" href="./pages/phan-loai.html?category_id=2">Cây văn phòng</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="phan-loai1.html">Cây để bàn</a>
+                  <a class="dropdown-item" href="./pages/phan-loai.html?category_id=3">Cây để bàn</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="phan-loai1.html">Cây dưới nước</a>
+                  <a class="dropdown-item" href="./pages/phan-loai.html?category_id=4">Cây dưới nước</a>
                 </li>
               </ul>
             </div>
