--- a/pages/user-register.html
+++ b/pages/user-register.html
@@ -404,10 +404,18 @@
                 Sản phẩm
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="phan-loai1.html">Cây dễ chăm</a></li>
-                <li><a class="dropdown-item" href="phan-loai1.html">Cây văn phòng</a></li>
-                <li><a class="dropdown-item" href="phan-loai1.html">Cây để bàn</a></li>
-                <li><a class="dropdown-item" href="phan-loai1.html">Cây dưới nước</a></li>
+                <li>
+                  <a class="dropdown-item" href="./phan-loai.html?category_id=1">Cây dễ chăm</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./phan-loai.html?category_id=2">Cây văn phòng</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./phan-loai.html?category_id=3">Cây để bàn</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./phan-loai.html?category_id=4">Cây dưới nước</a>
+                </li>
               </ul>
             </div>
           </li>
