--- a/pages/user-history-details.html
+++ b/pages/user-history-details.html
@@ -390,7 +390,7 @@
       <div class="brand">
         <div class="brand-logo">
           <!-- Quay về trang chủ  -->
-          <a href="../index.html"><img class="img-fluid" src="../assets/images/LOGO-2.png" alt="LOGO" /></a>
+          <a href="../index.html"><img class="img-fluid" src="../assets/images/LOGO-2.jpg" alt="LOGO" /></a>
         </div>
         <div class="brand-name">THE TREE</div>
       </div>
@@ -468,7 +468,7 @@
               <tbody>
                 <tr>
                   <td>
-                    <img src="../../assets/images/CAY2.PNG" alt="Product Image">
+                    <img src="../../assets/images/CAY2.jpg" alt="Product Image">
                     <div class="product-info">
                       <span class="product-name">Cay j ko bt ten</span><br>
                       <span class="sku">SKU: QJ-0001</span><br>
@@ -480,7 +480,7 @@
 
                 <tr>
                   <td>
-                    <img src="../../assets/images/CAY1.PNG" alt="Product Image">
+                    <img src="../../assets/images/CAY1.jpg" alt="Product Image">
                     <div class="product-info">
                       <span class="product-name">Chac cay xuong rong</span><br>
                       <span class="sku">SKU: JJ-0001</span><br>
