--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <link rel="stylesheet" href="./src/css/searchAdvanceMobile.css" />
   <link rel="stylesheet" href="./src/css/footer.css">
   <!-- JS  -->
-  <script src="./src/js/tim-kiem-nang-cao.js"></script>
   <script src="./src/js/main.js"></script>
   <script src="./assets/libs/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
   <script src="./src/js/onOffSeacrhAdvance.js"></script>
-  <script src="./src/js/search.js"></script>
+  <!-- <script src="./src/js/search.js"></script> -->
+  <!-- <script src="./src/js/tim-kiem-nang-cao.js"></script> -->
   <!-- Tìm kiếm cơ bản  -->
   <script src="./src/js/search-common.js"></script>
   <!-- Lọc sản phẩm  -->
