--- a/pages/thanh-toan.html
+++ b/pages/thanh-toan.html
@@ -293,16 +293,16 @@
                     </a>
                     <ul class="dropdown-menu">
                       <li>
-                        <a class="dropdown-item" href="../pages/phan-loai1.html">Cây dễ chăm</a>
+                        <a class="dropdown-item" href="./phan-loai.html?category_id=3">Cây dễ chăm</a>
                       </li>
                       <li>
-                        <a class="dropdown-item" href="../pages/phan-loai1.html">Cây văn phòng</a>
+                        <a class="dropdown-item" href="./phan-loai.html?category_id=1">Cây văn phòng</a>
                       </li>
                       <li>
-                        <a class="dropdown-item" href="../pages/phan-loai1.html">Cây để bàn</a>
+                        <a class="dropdown-item" href="./phan-loai.html?category_id=4">Cây để bàn</a>
                       </li>
                       <li>
-                        <a class="dropdown-item" href="../pages/phan-loai1.html">Cây dưới nước</a>
+                        <a class="dropdown-item" href="./phan-loai.html?category_id=2">Cây dưới nước</a>
                       </li>
                     </ul>
                   </li>
